# coderecall

./: .gitignore  LICENSE  README.md  pyproject.toml
src/coderecall/: __init__.py  config.py  hooks.py
src/coderecall/analysis/: __init__.py  change_model_builder.py  diff_summary.py  file_filter.py  languages.py  question_generator.py  side_effect_detector.py
src/coderecall/cli/: __init__.py  app.py  error_rendering.py  terminal_session.py
src/coderecall/cli/commands/: init.py  install_hook.py  review.py
src/coderecall/core/: __init__.py  errors.py  types.py
src/coderecall/evaluation/: __init__.py  follow_up_selector.py  heuristic_evaluator.py
src/coderecall/git/: __init__.py  diff_collector.py  git_adapter.py
src/coderecall/reporting/: __init__.py  builder.py  formatting.py  markdown.py  talking_points.py
tests/fixtures/payment_idempotency/src/: payment_handler.ts  payment_service.ts
tests/fixtures/payment_idempotency/tests/: payment_handler.test.ts
tests/integration/: test_change_model.py  test_cli.py  test_diff_collector.py  test_init_cli.py  test_install_hook_cli.py  test_payment_idempotency_context.py  test_pre_push_hook_runtime.py  test_project_config_cli.py
tests/unit/: test_change_model_builder.py  test_config.py  test_diff_summary.py  test_file_filter.py  test_follow_up_selector.py  test_git_adapter.py  test_heuristic_evaluator.py  test_hook_installer.py  test_question_generator.py  test_reporting.py  test_review_talking_points.py  test_side_effect_detector.py  test_terminal_session.py  test_types.py
